<resources>
    <string name="app_name">Plugin_setting</string>

    <string name="confirm_logout">确定退出登录?</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>

    <string name="setting_login">登录</string>
    <string name="setting_login_tips">请先登录，若没有账号请使用手机版APP注册</string>
    <string name="setting_login_mobile">手机号码</string>
    <string name="setting_login_password">登录密码</string>
    <string name="setting_login_forgetpassword">忘记密码？</string>
    <string name="setting_update">检查更新</string>

    <string name="setting">设置</string>
    <string name="setting_user">用户设置</string>
    <string name="setting_project">工程设置</string>
    <string name="setting_save">保存</string>
    <string name="setting_logout">解除绑定</string>

    <string name="setting_off">Off</string>
    <string name="setting_on">On</string>
    <string name="setting_enable">是否启用</string>

    <string name="setting_user_info">个人信息</string>
    <string name="setting_user_info_nickname">昵称</string>
    <string name="setting_user_info_sex">性别</string>
    <string name="setting_user_info_sex_male">男</string>
    <string name="setting_user_info_sex_female">女</string>
    <string name="setting_user_info_birthday">出生日期</string>
    <string name="setting_user_info_email">电子邮件</string>
    <string name="setting_user_info_success">个人信息更新成功!</string>

    <string name="setting_project_login_title">此处为工程人员设置用</string>
    <string name="setting_project_roomnum">房号设置</string>
    <string name="setting_project_sip">SIP设置</string>
    <string name="setting_project_network">网络设置</string>
    <string name="setting_project_password">工程密码</string>

    <string name="setting_project_roomnum_community">小区编号</string>
    <string name="setting_project_roomnum_house">楼栋号</string>
    <string name="setting_project_roomnum_unit">单元号</string>
    <string name="setting_project_roomnum_floor">楼层号</string>
    <string name="setting_project_roomnum_roomnum">房间号</string>
    <string name="setting_project_roomnum_devicecode">设备码</string>
    <string name="setting_project_roomnum_synchronouscode">同步码</string>
    <string name="setting_project_roomnum_service">服务器</string>

    <string name="setting_project_sip_devicedomain">设备域</string>
    <string name="setting_project_sip_address">Stun地址</string>
    <string name="setting_project_sip_port">Stun端口</string>
    <string name="setting_project_sip_username">用户名</string>
    <string name="setting_project_sip_password">密码</string>

    <string name="setting_project_network_ip">IP地址</string>
    <string name="setting_project_network_mask">子网掩码</string>
    <string name="setting_project_network_gateway">默认网关</string>
    <string name="setting_project_network_dns">DNS</string>
    <string name="setting_project_network_ip_address">当前IP地址: %1$s</string>

    <string name="setting_user_info_email_no">请使用正确的email格式!</string>

    <string name="setting_password">密码修改</string>
    <string name="setting_password_old">原密码</string>
    <string name="setting_password_new">新密码</string>
    <string name="setting_password_null">密码不能为空</string>
    <string name="setting_password_error">密码不正确</string>
    <string name="setting_password_confirm">确认密码</string>
    <string name="setting_password_old_null">原密码不能为空</string>
    <string name="setting_password_new_null">新密码不能为空</string>
    <string name="setting_password_confirm_new_null">确认密码不能为空</string>
    <string name="setting_password_success">修改密码成功,请牢记!</string>
    <string name="setting_password_not_same">新密码和确认密码不相同</string>
    <string name="setting_password_old_error">原密码不符</string>

    <string name="error_to_connect_server">网络连接失败!</string>
    <string name="error_no_data">暂无任何内容</string>
    <string name="error_wrong_phone_number">手机号不正确</string>
    <string name="error_wrong_password">密码为8~20位的字母数字符号</string>
</resources>
