<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/login_mobile_input"
        android:layout_width="@dimen/dp_260"
        android:layout_height="@dimen/dp_40"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_167"
        android:background="@color/color_99020405"
        android:inputType="number"
        android:paddingLeft="@dimen/dp_16"
        android:paddingRight="@dimen/dp_16"
        android:singleLine="true"
        android:textColor="@color/color_ffffff" />

    <EditText
        android:id="@+id/login_password_input"
        android:layout_width="@dimen/dp_260"
        android:layout_height="@dimen/dp_40"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_237"
        android:background="@color/color_99020405"
        android:inputType="textPassword"
        android:paddingLeft="@dimen/dp_16"
        android:paddingRight="@dimen/dp_16"
        android:singleLine="true"
        android:textColor="@color/color_ffffff" />

    <TextView
        android:layout_width="@dimen/dp_260"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_107"
        android:text="@string/setting_login_tips"
        android:textColor="@color/color_99ffffff"
        android:textSize="@dimen/sp_14" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/login_mobile_input"
        android:layout_alignTop="@id/login_mobile_input"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_toLeftOf="@id/login_mobile_input"
        android:gravity="center"
        android:text="@string/setting_login_mobile"
        android:textColor="@color/color_B3ffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/login_password_input"
        android:layout_alignTop="@id/login_password_input"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_toLeftOf="@id/login_password_input"
        android:gravity="center"
        android:text="@string/setting_login_password"
        android:textColor="@color/color_B3ffffff" />

    <TextView
        android:id="@+id/login"
        android:layout_width="@dimen/dp_109"
        android:layout_height="@dimen/dp_40"
        android:layout_alignLeft="@id/login_password_input"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_307"
        android:background="@color/color_14ce63"
        android:gravity="center"
        android:text="@string/setting_login"
        android:textColor="@color/color_ffffff"
        android:textSize="@dimen/sp_16" />

    <TextView
        android:id="@+id/forgerpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/login_password_input"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_318"
        android:text="@string/setting_login_forgetpassword"
        android:textColor="@color/color_14ce63"
        android:textSize="@dimen/sp_16" />

</RelativeLayout>
