<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sui_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_38"
        android:gravity="center_vertical|right">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_user_info_nickname"
            android:textColor="@color/color_4Dffffff"
            android:textSize="@dimen/sp_16" />

        <EditText
            android:id="@+id/sui_nickname_input"
            android:layout_width="@dimen/dp_260"
            android:layout_height="@dimen/dp_40"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/dp_20"
            android:background="@color/color_99020405"
            android:paddingLeft="@dimen/dp_16"
            android:paddingRight="@dimen/dp_16"
            android:singleLine="true"
            android:textCursorDrawable="@null"
            android:textColor="@color/color_ffffff" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_30"
        android:gravity="center_vertical|right">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_user_info_sex"
            android:textColor="@color/color_4Dffffff"
            android:textSize="@dimen/sp_16" />

        <RadioGroup
            android:layout_width="@dimen/dp_260"
            android:layout_height="@dimen/dp_30"
            android:layout_marginLeft="@dimen/dp_20"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/sui_male"
                style="@style/CheckBoxStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:paddingLeft="10dp"
                android:text="@string/setting_user_info_sex_male" />

            <RadioButton
                android:id="@+id/sui_female"
                style="@style/CheckBoxStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_40"
                android:paddingLeft="10dp"
                android:text="@string/setting_user_info_sex_female" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_38"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_user_info_birthday"
            android:textColor="@color/color_4Dffffff"
            android:textSize="@dimen/sp_16" />

        <EditText
            android:id="@+id/sui_birthday_input"
            android:layout_width="@dimen/dp_260"
            android:layout_height="@dimen/dp_40"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/dp_20"
            android:background="@color/color_99020405"
            android:paddingLeft="@dimen/dp_16"
            android:paddingRight="@dimen/dp_16"
            android:singleLine="true"
            android:textCursorDrawable="@null"
            android:cursorVisible="false"
            android:editable="false"
            android:textColor="@color/color_ffffff" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_38"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_user_info_email"
            android:textColor="@color/color_4Dffffff"
            android:textSize="@dimen/sp_16" />

        <EditText
            android:id="@+id/sui_email_input"
            android:layout_width="@dimen/dp_260"
            android:layout_height="@dimen/dp_40"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/dp_20"
            android:background="@color/color_99020405"
            android:paddingLeft="@dimen/dp_16"
            android:paddingRight="@dimen/dp_16"
            android:singleLine="true"
            android:textCursorDrawable="@null"
            android:textColor="@color/color_ffffff" />

    </LinearLayout>

    <TextView
        android:id="@+id/sui_save"
        android:layout_width="@dimen/dp_100"
        android:layout_height="@dimen/dp_40"
        android:layout_gravity="right"
        android:layout_marginRight="@dimen/dp_160"
        android:layout_marginTop="@dimen/dp_30"
        android:background="@color/color_14ce63"
        android:gravity="center"
        android:text="@string/setting_save"
        android:textColor="@color/color_ffffff"
        android:textSize="@dimen/sp_16" />
</LinearLayout>
