<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/spm_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:visibility="gone"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/spm_title_rg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/spm_title_project_roomnum"
            style="@style/InfoTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/setting_project_roomnum" />

        <RadioButton
            android:id="@+id/spm_title_project_sip"
            style="@style/InfoTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_30"
            android:text="@string/setting_project_sip" />

        <RadioButton
            android:id="@+id/spm_title_project_network"
            style="@style/InfoTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_30"
            android:text="@string/setting_project_network" />

        <RadioButton
            android:id="@+id/spm_title_project_password"
            style="@style/InfoTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_30"
            android:text="@string/setting_project_password" />
    </RadioGroup>

    <include layout="@layout/layout_setting_project_room"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_40"/>

    <include layout="@layout/layout_setting_project_sip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_40"/>

    <include layout="@layout/layout_setting_project_network"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_40"/>

    <include layout="@layout/layout_setting_project_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_40"/>
</LinearLayout>
