<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/spl_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_45"
        android:text="@string/setting_project_password"
        android:textColor="@color/color_B3ffffff"
        android:textSize="@dimen/sp_16" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_20"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_project_login_title"
            android:textColor="@color/color_99ffffff"
            android:textSize="@dimen/sp_14" />

        <EditText
            android:id="@+id/spl_password_input"
            android:layout_width="@dimen/dp_260"
            android:layout_height="@dimen/dp_40"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_20"
            android:background="@color/color_99020405"
            android:paddingLeft="@dimen/dp_16"
            android:paddingRight="@dimen/dp_16"
            android:singleLine="true"
            android:textColor="@color/color_ffffff"
            android:textCursorDrawable="@null" />

        <TextView
            android:id="@+id/spl_login"
            android:layout_width="@dimen/dp_109"
            android:layout_height="@dimen/dp_40"
            android:layout_alignLeft="@id/login_password_input"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_40"
            android:background="@color/color_14ce63"
            android:gravity="center"
            android:text="@string/setting_login"
            android:textColor="@color/color_ffffff"
            android:textSize="@dimen/sp_16" />
    </LinearLayout>

</LinearLayout>
