<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_25"
        android:layout_marginTop="@dimen/dp_20">

        <RadioGroup
            android:id="@+id/title_rg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/title_user"
                style="@style/InfoTitleStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/setting_user" />

            <RadioButton
                android:id="@+id/title_project"
                style="@style/InfoTitleStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_30"
                android:text="@string/setting_project" />

        </RadioGroup>

        <TextView
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawableLeft="@mipmap/icon_logout"
            android:drawablePadding="@dimen/dp_5"
            android:gravity="center_vertical"
            android:text="@string/setting_logout"
            android:textColor="@color/color_ffffff"
            android:textSize="@dimen/sp_16" />
    </LinearLayout>

    <include
        layout="@layout/layout_setting_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_20" />

    <include layout="@layout/layout_setting_project"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_20"/>
</LinearLayout>
